--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -101,6 +101,16 @@ https://link.springer.com/content/pdf/10.1007%2Fs10608-014-9662-4.pdf},
   publisher={Hogrefe Verlag G{\"o}ttingen}
 }
 
+@inbook{Bradley2000,
+   author = {Bradley, M. M. and Lang, P. J.},
+   title = {Measuring emotion: Behavior, feeling, and physiology},
+   booktitle = {Cognitive neuroscience of emotion},
+   editor = {Lane, R. D. and Nadel, L.},
+   publisher = {Oxford University Press},
+   pages = {242-276},
+   year = {2000}
+}
+
 @article{Cacioppo1982,
    author = {Cacioppo, J. T. and Petty, R. E.},
    title = {The Need for Cognition},
