added reference Fridlund

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -224,6 +224,21 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
   urldate    = {2020-03-30},
 }
 
+@article{Fridlund1986,
+   author = {Fridlund, A. J. and Cacioppo, J. T.},
+   title = {Guidelines for human electromyographic research},
+   journal = {Psychophysiology},
+   volume = {23},
+   number = {5},
+   pages = {567-89},
+   ISSN = {0048-5772 (Print)
+0048-5772 (Linking)},
+   DOI = {10.1111/j.1469-8986.1986.tb00676.x},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/3809364
+https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=nlm%3Apubmed},
+   year = {1986}
+}
+
 @Article{Greiner2015,
   author     = {Greiner, Ben},
   journal    = {Journal of the Economic Science Association},
